--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Montserrat:wght@500&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
-      <img class="bg-image" src="" alt="Background Image of India" />
+      <!-- <img class="bg-image" src="" alt="Background Image of India" /> -->
 
       <img
         src="https://cdn.trell.co/images/orig/7vudEpjFCObHcBpljh4WBb7waDMYKPXc.png"
@@ -32,6 +36,7 @@
       </h4>
 
       <footer class="footer fbca">
+        <p class="button-support-title">Click below to continue.</p>
         <button class="migrate-button">I WANT TO MIGRATE MY CONTENT</button>
 
         <p class="num-tiktokers">
