--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,19 @@
 
     <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" href="./form.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Montserrat:wght@500&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="container">
-      <img class="bg-image" src="" alt="Background Image of India" />
+    <div class="container home-container">
+      <!-- <img class="bg-image" src="" alt="Background Image of India" /> -->
 
       <img
         src="https://cdn.trell.co/images/orig/7vudEpjFCObHcBpljh4WBb7waDMYKPXc.png"
@@ -24,7 +29,11 @@
       <h3 class="logo-support-title">India’s #1 Vlogging App</h3>
 
       <h1 class="page-title">Dear TikTok-ers!</h1>
-      <h1 class="page-title-2">Unable to access your TikTok content?</h1>
+      <h1 class="page-title-2">
+        Unable to access <br />
+        <img src="./tiktok-1-copy-2.svg" alt="Tiktok logo" /> your TikTok
+        content?
+      </h1>
 
       <h4 class="subtitle">
         Trell will help you migrate your TikTok content from your profile
@@ -32,7 +41,10 @@
       </h4>
 
       <footer class="footer fbca">
-        <button class="migrate-button">I WANT TO MIGRATE MY CONTENT</button>
+        <p class="button-support-title">Click below to continue.</p>
+        <button onclick="goToForm()" class="primary-button">
+          I Want To Migrate My Content
+        </button>
 
         <p class="num-tiktokers">
           400+ TikTok-ers safely migrated their videos to Trell in the last 24
@@ -41,10 +53,141 @@
       </footer>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/balance-text/3.3.0/balancetext.min.js"></script>
-    <script>
-      const el = document.querySelector('.subtitle');
-      balanceText(el);
-    </script>
+    <div class="container form-container hide">
+      <h1 class="form-page-title">
+        Provide us with the details below to help you migrate your content
+        safely. Your details will be safe with us.
+      </h1>
+
+      <form onsubmit="event.preventDefault();" class="transfer-form">
+        <div class="personal-info">
+          <h3 class="form-title">1. Your Personal Information*</h3>
+          <span class="input-box">
+            <label class="input-label" for="Full Name">Full Name</label
+            ><input
+              class="input input__full-name"
+              type="text"
+              name="Full Name"
+              id=""
+            />
+          </span>
+          <span class="input-box">
+            <label class="input-label" for="Current City">Current City</label
+            ><input
+              class="input input__city"
+              type="text"
+              name="Current City"
+              id=""
+            />
+          </span>
+          <span class="input-box input-box--pt24">
+            <label class="input-label" for="E-mail ID">E-mail ID</label
+            ><input
+              class="input input__email"
+              type="text"
+              name="E-mail ID"
+              id=""
+            />
+          </span>
+          <span class="input-box input-box--pt24">
+            <label class="input-label" for="Phone Number">Phone Number</label
+            ><input
+              class="input input__phone"
+              type="text"
+              name="Phone Number"
+              id=""
+            />
+          </span>
+        </div>
+
+        <div class="tiktok-info">
+          <h3 class="form-title">2. Your TikTok Handle Information*</h3>
+          <span class="input-box">
+            <label class="input-label" for="Tiktok Handle Name"
+              >Tiktok Handle Name</label
+            ><input
+              class="input input__handle"
+              type="text"
+              name="Tiktok Handle Name"
+              id=""
+            />
+          </span>
+          <span class="input-box">
+            <label class="input-label" for="Tiktok Handle Profile URL"
+              >Tiktok Handle Profile URL</label
+            ><input
+              class="input input__profile"
+              type="text"
+              name="Tiktok Handle Profile URL"
+              id=""
+            />
+          </span>
+        </div>
+
+        <button onclick="submitForm()" class="submit-button">Submit</button>
+      </form>
+
+      <div class="num-tiktokers--form">
+        <p>
+          <span class="text--orange">3243 TikTok-ers</span> safely migrated
+          their videos to Trell in the last 24 hours!
+        </p>
+
+        <p>Check the profiles of @XXXXXXX, @XXCCCCC, @WWWWMMM & many others.</p>
+      </div>
+    </div>
+
+    <div class="container success-container hide">
+      <img
+        src="https://cdn.trell.co/images/orig/7vudEpjFCObHcBpljh4WBb7waDMYKPXc.png"
+        alt="Trell Logo"
+        class="trell-logo"
+      />
+      <h3 class="logo-support-title">India’s #1 Vlogging App</h3>
+
+      <h1 class="page-title">Thank you for submitting your details.</h1>
+
+      <h4 class="subtitle">
+        We will mail you on xxx@gmail.com with the details in less than 24
+        hours.
+      </h4>
+      <h4 class="subtitle-2">
+        In order to avoid plagiarism, we will send you a few questions to
+        authenticate your identity before sending you the login credentials of
+        your account.
+      </h4>
+
+      <hr class="divider" />
+
+      <div class="success-buttons">
+        <button class="primary-button primary-button--share fbca">
+          <img
+            class="share-button__icon"
+            src="./share-1.svg"
+            alt="Share icon"
+          />
+          <span class="share-button--mobile"> Share this with friends </span>
+          <span class="share-button--desktop">Share this</span>
+        </button>
+
+        <a href="mailto:savemyvideos@trell.in">
+          <button class="primary-button primary-button--contact fbca">
+            Contact Us
+          </button>
+        </a>
+      </div>
+
+      <footer class="footer fbca">
+        <p>
+          If you have any queries regarding this, please contact us on mail.
+        </p>
+
+        <a class="contact-us" href="mailto:savemyvideos@trell.in">Contact Us</a>
+      </footer>
+    </div>
+    <!-- </div> -->
+
+    <script src="./index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/validate-js/2.0.1/validate.min.js"></script>
   </body>
 </html>
