time function for followers

--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
       <footer class="footer fbca">
         <div class="num-tiktokers--form">
           <p>
-            <span class="text--orange">3243 TikTok-ers</span> safely migrated
-            their videos to Trell till now!
+            <span class="text--orange">
+              <span class="num-tiktokers"></span> TikTok-ers</span
+            >
+            safely migrated their videos to Trell till now!
           </p>
 
           <p class="profile-handles">
