iphone 5 , iphone 8 , mac os 13 inch fix

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="num-tiktokers--form">
           <p>
             <span class="text--orange">
-              <span class="num-tiktokers"></span> TikTok-ers</span
+              <span class="text--orange num-tiktokers"></span> TikTok-ers</span
             >
             safely migrated their videos to Trell till now!
           </p>
