--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
         f.parentNode.insertBefore(j, f);
       })(window, document, 'script', 'dataLayer', 'GTM-MTPKBKF');
     </script>
-
-    <link rel="stylesheet" href="./index.css?v=7" />
-    <link rel="stylesheet" href="./reset.css?v=7" />
-    <link rel="stylesheet" href="./form.css?v=7" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <meta name="version" content="1.0" />
+    <link rel="stylesheet" href="./index.css?v=8" />
+    <link rel="stylesheet" href="./reset.css?v=8" />
+    <link rel="stylesheet" href="./form.css?v=8" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
       rel="stylesheet"
@@ -301,7 +302,7 @@
     </div>
     <!-- </div> -->
 
-    <script src="./index.js?v=7"></script>
+    <script src="./index.js?v=8"></script>
     <!-- <script src="./upload.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/validate-js/2.0.1/validate.min.js"></script>
   </body>
