--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+
+  <body onload="capturePageImpression()">
     <div class="container home-container">
       <!-- <img class="bg-image" src="" alt="Background Image of India" /> -->
 
